moon12/static/css/base.css
@charset "UTF-8";
html,

body{
  min-width:960px;
  height:100%;
}
html{
  /* background:#191919 url(../../images/splash/bg-page.gif) 50% 0; */
}
body {
  /* background:url(../images/canvas.jpg) no-repeat 50% 0; */
}

/* HEADER */
.header {
  width: 960px;
  height: 116px;
  margin-left:auto;
  margin-right:auto;
  margin-top:20px;
  margin-bottom:0;
  border-color: #bbb;
  border-style: none none solid none;
  border-width: 0px 0px 1px 0px;
}

.left-nav {
}

.right-nav {
  position: relative;
  height:100%;
  width:400px;
}

.right-nav-content {
  position: absolute;
  bottom: 8px;
  left: 0;
}

.link-nav {
  height: 100%;
  float: left;
  margin: 8px;
  text-align: bottom;
}

/* FOOTER */
.footer {
  width: 960px;
  margin: 30px auto 0 auto;
  text-align: center;
}

.copyright {
}

/* HOME */
.home {
  width: 960px;
  margin: 0 auto;
}

.home .section-title {
  font-size:1.2em;
  text-align: center;
  color: #5F574F;
}

.home a {
  color: #5F574F;
  text-decoration: none;
}

.home a:focus, a:hover, a:active {
  color: #5F574F;
  text-decoration: underline;
}

.home-section {
  width:100%;
  border-color: #eee;
  border-style: solid;
  border-width: 1px 1px 1px 1px;
  margin-top: 30px;
}

.home .exhibit-info {
  width:50%
}

.home .exhibit-image {
  width: 300px;
  height: 300px;
}

.home .artist-section {
  /* 6 per-row
  width:155px;
  padding-left:5px; */

  width:215px;
  float:left;
  padding-left:25px;
  padding-top:20px;
  padding-bottom:20px;
}

.home .artist-name {
  width:110px;
  text-align:center;
  display:table;
  height:70px;
}

.home .artist-name .cell {
  display:table-cell;
  vertical-align:middle;
}

.home .artist-image {
  width: 70px;
  height: 70px;
}

.home .event-section {
}

.home .event-blurb {
  margin-right:10px;
  margin-left:10px;
  width: 240px;
}

.home .event-image {
  width: 220px;
}

.home .gallery-image {
  height: 300px;
}

.home .gallery-map {
  height: 300px;
  margin-left:25px;
}

/* EXHIBITS */
.exhibit-current {
  text-align: center;
  margin: 15px 0px auto;
}

.exhibit-image {
  height: 500px;
}

.exhibit-invite {
  border:1px solid #bbb;
}

/* ARTISTS */
.artists {
  margin-top:40px;
}

.artists .page-title {
  margin-bottom:40px;
}

.backlink {
  font-size:16px;
}

.page-title {
  text-align:center;
  font-size:1.2em;
  font-weight:normal;
  width: 100%;
}

.artist {
  margin-bottom: 80px;
}

.artist-container {

}

.artist .artist-name {
  color: #5F574F;
  font-size:1.2em;
  height:30px;
}

.artist-left {
  text-align: center;
}

.artist .artist-image {
  width:250px;
  height:250px;
}

.artist-right {
  margin-left:30px;
  width: 200px;
}

.artist .gallery-link {
  margin-top:5px;
  font-size:0.8em;
}
.artist .bio-link {
  margin-top:5px;
  font-size:0.8em;
}
.artist .statement-link {
  margin-top:5px;
  font-size:0.8em;
}
.artist .essays-link {
  margin-top:5px;
  font-size:0.8em;
}
.artist .videos-link {
  margin-top:5px;
  font-size:0.8em;
}

.artist-gallery {
  margin-top: 30px;
}

.artist-bio {
  margin-top: 30px;
}

/* EVENTS */
.events {
  margin-top: 30px;
}

.event-image {
  max-width: 400px;
}

.event-blurb {
  width:500px;
  margin-left:25px;
}

/* ABOUT */
.about {
  text-align: left;
  margin: 15px 0px auto;
}

.gallery-description {
  /*margin-left:30px;*/
}

.gallery-map {
  margin-left:30px;
}

.about-left {
  width:50%;
}

.about-right {
  width:50%;
}

.about .gallery-image {
  width:480px;
}

.facebook-icon {
  vertical-align:top;
  width:17px;
  height:17px;
}

.about-contact {
  margin-top: 30px;
}

.about-contact div {
  margin-top:7px;
}

.about-map {
  margin-top: 30px;
}

.home-about-map {
  margin-top: 40px;
}

/* COMMON */

.moon-red {
  color: #EF4135;
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

.verticalDivider {
   border-right:1px solid #ddd;
   height:60px;
   width:1px;
}

.clearfix:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.clearfix {
  display: inline-block;
}

html[xmlns] .clearfix {
  display: block;
}

* html .clearfix {
  height: 1%;
}


/* masonry */
.col3 { width: 280px; }

/**** Clearfix ****/
.clearfixx:before, .clearfixx:after { content: ""; display: table; }
.clearfixx:after { clear: both; }
.clearfixx { zoom: 1; }

.box {
  margin: 5px;
  padding: 5px;
  background: #FDFAF8;
  font-size: 11px;
  line-height: 1.4em;
  float: left;
  border-radius: 5px;
}

.box h2 {
  font-size: 14px;
  font-weight: 200;
}

.box img,
#tumblelog img {
  display: block;
  width: 100%;
}

